替换jquery为cdn地址

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="%PUBLIC_URL%/editor/jquery.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/editor/jquery.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="%PUBLIC_URL%/editor/editormd.min.js"></script>
   </body>
 </html>
