--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#000000" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.min.css">
-    <title>土川记</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- <script src="%PUBLIC_URL%/editor/jquery.min.js"></script> -->
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="%PUBLIC_URL%/editor/editormd.min.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#000000" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.min.css">
+  <link rel="stylesheet" href="./skeleton.css" />
+  <title>一日一记</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div class="skeleton">
+    <div class="skeleton_header">
+      <div class="skeleton_header_menu">%TITLE%</div>
+      <div class="skeleton_header_menu_right">
+          <button class="skeleton_header_menu_offline"><span>%OFFLINE_TITLE%</span></button>
+          <button class="skeleton_header_menu_login"><span>登 陆</span></button>
+      </div>
+    </div>
+    <div class="skeleton_editor_content">
+        <svg viewBox="0 0 1024 1024" focusable="false" class="anticon-spin" data-icon="loading" width="1em" height="1em" fill="currentColor" aria-hidden="true"><path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"></path></svg>
+    </div>
+  </div>
+  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/editor/editormd.min.js"></script>
+</body>
+
 </html>
