:fire: 修改skeleton文件地址

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.min.css">
-  <link rel="stylesheet" href="./skeleton.css" />
+  <link rel="stylesheet" href="/css/skeleton.css" />
   <title>一日一记</title>
 </head>
 
