:feature: 重新设计首页

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -26,7 +26,8 @@
     </div>
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-  <script src="%PUBLIC_URL%/editor/editormd.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/editor/editormd.min.js"></script> -->
+  <script src="%PUBLIC_URL%/editor/editormd.js"></script>
 </body>
 
 </html>
