feat: update editormd

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,10 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#000000" />
-  <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.min.css">
+  <meta name="keywords" content="markdown 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
+  <meta name="description" content="一款笔记应用">
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.min.css"> -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/editor/editormd.css">
   <title>一日一记</title>
 </head>
 
