--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <meta name="keywords" content="markdown 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
   <meta name="description" content="一款笔记应用">
