--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/images/watermelon.ico" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <meta name="keywords" content="markdown 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
