--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,14 +8,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="keywords" content="markdown 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
   <meta name="description" content="一款笔记应用">
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/simditor/simditor.css" />
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
   <title>一日一记</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
-  <!-- <script src="%PUBLIC_URL%/editor/editormd.js"></script> -->
   <script type="text/javascript" src="%PUBLIC_URL%/editor/jquery.min.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/editor/module.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/editor/uploader.js"></script>
