feat: add some feature

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,10 +4,17 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/images/watermelon.ico" />
-  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.bigxigua.net/images/logo.jpeg">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#000000" />
-  <meta name="keywords" content="markdown 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
+  <meta name="keywords" content=" 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
   <meta name="description" content="一款笔记应用">
+  <meta property="og:type" content="webpage">
+  <meta property="og:url" content="https://www.bigxigua.net/">
+  <meta property="og:title" content="一日一记">
+  <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理">
+  <meta property="og:image" content="https://www.bigxigua.net/images/logo.jpeg">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
   <title>一日一记</title>
 </head>
