feat: 静态资源打包

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/images/watermelon.ico" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.bigxigua.net/images/logo.jpeg">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%LOGO%">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#000000" />
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://www.bigxigua.net/">
   <meta property="og:title" content="一日一记">
   <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理">
-  <meta property="og:image" content="https://www.bigxigua.net/images/logo.jpeg">
+  <meta property="og:image" content="%LOGO%">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
   <title>一日一记</title>
 </head>
@@ -22,11 +22,6 @@
 <body>
   <div id="root"></div>
   <script type="text/javascript" src="%PUBLIC_URL%/editor/jquery.min.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/module.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/uploader.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/hotkeys.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/dompurify.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/simditor.js"></script>
 </body>
 
 </html>
