feat: change website name

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,11 +12,11 @@
   <meta name="description" content="一款笔记应用">
   <meta property="og:type" content="webpage">
   <meta property="og:url" content="https://www.bigxigua.net/">
-  <meta property="og:title" content="一日一记">
+  <meta property="og:title" content="西瓜笔记">
   <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理">
   <meta property="og:image" content="%LOGO%">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
-  <title>一日一记</title>
+  <title>西瓜笔记</title>
 </head>
 
 <body>
