feat: 新增一些功能

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,12 +8,12 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#000000" />
-  <meta name="keywords" content=" 编辑器 editor 笔记 笔记本 记事本 记录 记账本">
-  <meta name="description" content="一款笔记应用">
+  <meta name="keywords" content=" 在线编辑器 markdown 所见即所得 editor 西瓜笔记 文档 西瓜文档 目录编排 笔记 笔记本 记事本 记录 记账本">
+  <meta name="description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理,用于整理、归纳、记录零散知识点和录入笔记有很好的作用">
   <meta property="og:type" content="webpage">
   <meta property="og:url" content="https://www.bigxigua.net/">
-  <meta property="og:title" content="西瓜笔记">
-  <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理">
+  <meta property="og:title" content="西瓜文档">
+  <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理,用于整理、归纳、记录零散知识点和录入笔记有很好的作用">
   <meta property="og:image" content="%LOGO%">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
   <title>西瓜笔记</title>
