--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="https://www.bigxigua.net/">
   <meta property="og:title" content="西瓜文档">
   <meta property="og:description" content="一款所见即所得得在线云端编辑器，善于进行笔记记录/博客分享/日记/知识沉淀/管理,用于整理、归纳、记录零散知识点和录入笔记有很好的作用">
+  <meta name="baidu-site-verification" content="qd3V4qz5lp" />
   <meta property="og:image" content="%LOGO%">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
   <title>西瓜笔记</title>
