feat: doc文档新增分页查询

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -17,7 +17,7 @@
   <meta name="baidu-site-verification" content="qd3V4qz5lp" />
   <meta property="og:image" content="%LOGO%">
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/editor/simditor.css" />
-  <title>西瓜笔记</title>
+  <title>西瓜文档</title>
 </head>
 
 <body>
