--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,7 +22,8 @@
 
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="%PUBLIC_URL%/editor/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="%PUBLIC_URL%/editor/jquery.min.js"></script> -->
 </body>
 
 </html>
